# django-xenforo

./: .coveragerc  .gitattributes  .gitignore  .python-version  .travis.yml  MANIFEST.in  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  settings.rst
xenforo/: __init__.py  _version.py  apps.py  backends.py  conf.py  hashers.py  middleware.py  utils.py
xenforo/tests/: test_backends.py  test_hashers.py  test_middleware.py  test_utils.py
