[global]
setup-hooks =
    xenforo.version_hook

[metadata]
name = django-xenforo
author = Chris Hasenpflug
author-email = chris@hasenpflug.net
summary = A Django library to integrate with a XenForo forum.
description-file = README.rst
home-page = https://bitbucket.org/chrishas35/django-xenforo/overview
project-url =
    Bitbucket, https://bitbucket.org/chrishas35/django-xenforo/overview
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Utilities
    Framework :: Django

[files]
packages =
    xenforo
extra_files =
    README.rst

[backwards_compat]
zip_safe = False