[metadata]
name = django-xenforo
version = 0.1.dev4
author = Chris Hasenpflug
author-email = chris@hasenpflug.net
summary = A Django library to integrate with a XenForo forum.
description-file = README.rst
home-page = https://bitbucket.org/chrishas35/django-xenforo/overview
requires-dist =
    Django (>=1.4)
project-url =
    Bitbucket, https://bitbucket.org/chrishas35/django-xenforo/overview
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Topic :: Utilities
    Framework :: Django

[files]
packages =
    xenforo
extra_files =
    README.rst

[backwards_compat]
zip_safe = False
tests_require =
    pytest==2.3.4

[test]
test-suite = runtests.runtests

[pytest]
pep8maxlinelength = 99
